[package]
name = "certblaze"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
acme-micro = "0.12"
anyhow = "1.0"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = { version = "3.2", features = ["termination"] }
env_logger = "0.9"
log = "0.4"
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
tiny_http = "0.9"
toml = "0.5"
